# it-ticketing-system

./: .env.example  .gitignore  .prettierignore  .prettierrc  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.js  server.js  vite.config.mjs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  e2e.yml  support-ops-ci.yml  support-ops-health-check.yml
Qa-Automation/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
Qa-Automation/docs/: BUG_REPORTS.md  TEST_CASES.md  TEST_STRATEGY.md  TRACEABILITY_MATRIX.md
Qa-Automation/fixtures/: ticketData.ts  (+1 more)
Support-Ops-Automation/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
Support-Ops-Automation/.github/workflows/: ci.yml  health-check.yml
Support-Ops-Automation/docs/: INCIDENT_RESPONSE.md  RUNBOOK.md  SAMPLE_INCIDENT_REPORT.md  SAMPLE_STATUS_REPORT.md
Support-Ops-Automation/src/support_ops/: __init__.py  config.py  health_check.py  incident_generator.py  report_generator.py  synthetic_login.py  ticket_api_check.py
Support-Ops-Automation/tests/: test_health_check.py  test_incident_generator.py  test_report_generator.py  test_synthetic_login.py
api/: [...path].js  health.js  index.js  tickets.js
docs/: ACCESSIBILITY_CHECKLIST.md  API.md  ARCHITECTURE.md  BUG_REPORT_EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  RUNBOOK.md  SECURITY_NOTES.md  TEST_PLAN.md
scripts/: free-api-port.ps1  seed.js
(+39 files in other folders)
